# elementary-dbt

./: .env  .gitignore  docker-compose.yml  init.sh  pyproject.toml
dbt/adventureworks/: dbt_project.yml  packages.yml  requirements.txt
dbt/adventureworks/dbt/edr_target/: elementary_output.json
dbt/adventureworks/macros/: dbt_housekeeping.sql  generate_source.sql  get_relations_by_pattern.sql
dbt/adventureworks/models/bronze/: brz_aw_address.sql  brz_aw_address.yml  brz_aw_country_region.sql  brz_aw_country_region.yml  brz_aw_credit_card.sql  brz_aw_credit_card.yml  brz_aw_customer.sql  brz_aw_customer.yml  brz_aw_date.sql  brz_aw_date.yml  brz_aw_person.sql  brz_aw_person.yml  brz_aw_product.sql  brz_aw_product.yml  brz_aw_product_category.sql  brz_aw_product_category.yml  brz_aw_product_subcategory.sql  brz_aw_product_subcategory.yml  brz_aw_sales_order_detail.sql  brz_aw_sales_order_detail.yml  brz_aw_sales_order_header.sql  brz_aw_sales_order_header.yml  brz_aw_sales_order_header_sales_reason.sql  brz_aw_sales_order_header_sales_reason.yml  brz_aw_sales_reason.sql  brz_aw_sales_reason.yml  brz_aw_state_province.sql  brz_aw_state_province.yml  brz_aw_store.sql  brz_aw_store.yml
dbt/adventureworks/models/gold/: gld_obt_sales.sql  gld_obt_sales.yml
dbt/adventureworks/models/raw/: raw.yml
dbt/adventureworks/profiles/: profiles.yml
dbt/jaffle_shop/: dbt_project.yml  packages.yml
dockerfiles/dbt-databricks/: Dockerfile
dockerfiles/dbt-postgres/: Dockerfile
postgres/config/: init.sql
profiles/: databricks.yml  postgres.yml
(+30 files in other folders)
